--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,3 +133,21 @@ h2 {
 span.highlight {
   background-color: #ffffd0;
 }
+
+.button {
+  display: inline-block;
+  padding: 7px 10px;
+  background-color: #3a8ff7;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0771f3; /* Darker shade of blue on hover */
+  color: #ffffff;
+}
